# thread-sanitizer

./: LICENSE  Presentation.pptx  README.md  ~$Presentation.pptx
docs/: 0_motivation.md  1_lamports_happens_before.md  2_vector_clocks.md  3_djit+.md  4_fast_track.md  thread_sanitizer_v1.md
examples/: CMakeLists.txt  tiny_race.cc
